# MeshBridge

./: README.md  config.example.yaml  install.sh  pyproject.toml
legacy/: meshcore-bridge.py  meshcore-set-region.py  mqtt-to-discord.py
src/meshbridge/: __init__.py  __main__.py  app.py  bridge.py  cli.py  config.py  events.py  mqtt.py  plugin.py  wizard.py
src/meshbridge/plugins/: __init__.py  discord.py  homeassistant.py  ping.py  route.py
tests/: conftest.py  test_app.py  test_bridge.py  test_config.py  test_discord.py  test_events.py  test_homeassistant.py  test_mqtt.py  test_ping.py  test_plugin_loading.py  test_route.py
